--- a/PC/html/new/menu0.html
+++ b/PC/html/new/menu0.html
@@ -807,17 +807,11 @@ jQuery(function($){
                 </span>
             </fieldset>
             <div class="wordlist">
-                <strong>자주찾는 검색어 :</strong>
-                <a href="#">회원정보</a>,
-                <a href="#">주문결제</a>,
-                <a href="#">배송</a>,
-                <a href="#">반품</a>,
-                <a href="#">교환</a>,
-                <a href="#">환불</a>,
-                <a href="#">마일리지</a>,
-                <a href="#">예치금</a>,
-                <a href="#">쿠폰</a>,
-                <a href="#">영업점</a>
+                <strong class="usualword">자주찾는 검색어</strong>
+                <a href="#">주문결제</a>
+                <a href="#">배송</a>
+                <a href="#">반품/교환/환불</a>
+                <a href="#">통합 멤버십</a>
             </div>
         </form>
     </div>
