--- a/PC/html/new/menu1_1.html
+++ b/PC/html/new/menu1_1.html
@@ -892,10 +892,10 @@
                 <div class="sub_contents">
                     <h3 class="page_title mgt0">SOS상담</h3>
                     <ul class="list_type02">
-                        <li>핫트랙스는, 원활한 상담과 타인의 주민번호도용 및 허위정보로 인한 피해를 방지하기 위해 실명인증을 시행하고 있습니다.</li>
-                        <li>교보핫트랙스 회원이신 고객께서는 [회원 상담]을 선택해 주시기 바라며 (로그인 후 바로 이용가능하십니다),<br />비회원으로 상담을 원하시는 고객께서는 <span class="point02">[비회원 상담]</span>을 선택해 주시기 바랍니다.</li>
-                        <li><span class="point02">[비회원 상담]</span>의 경우 실명확인을 하셔야만 접수가 가능합니다.</li>
-                        <li>입력하신 정보는 고객님의 동의 없이 공개되지 않으며, 개인정보보호정책에 의해 보호 받고 있습니다.</li>
+                        <li>핫트랙스는, 원활한 상담과 타인의 주민번호도용 및 허위정보로 인한 피해를 방지하기 위해 실명인증을 시행하고 있습니다. </li>
+                        <li>교보핫트랙스 회원이신 고객께서는 [회원 상담]을 선택해 주시기 바라며 (로그인 후 바로 이용가능하십니다), <br> 비회원으로 상담을 원하시는 고객께서는 [비회원 상담]을 선택해 주시기 바랍니다. </li>
+                        <li>[비회원 상담]의 경우 실명확인을 하셔야만 접수가 가능합니다. </li>
+                        <li>입력하신 정보는 고객님의 동의 없이 공개되지 않으며, 개인정보보호정책에 의해 보호 받고 있습니다. </li>
                     </ul>
 
                     <!-- <FORM id="reqForm" name="reqForm" method="POST" action="">
@@ -917,7 +917,7 @@
                                 <!-- <h4 class="tit01">비회원 상담</h4> -->
                                 <div class="btn">
                                     <a href="javascript://" onclick="javascript:fnPopup('0', '정상 처리되었습니다.');" class="btn_type07">비회원 상담 바로가기</a>
-                                    <p>실명인증 후 상담이 가능합니다.</p>
+                                    <p class="mgt10">실명인증 후 상담이 가능합니다.</p>
                                 </div>
                                 <p class="txt">교보문고/핫트랙스 통합 회원으로 가입하시면<br /> 편리함과 혜택이 늘어납니다!</p>
                                 <a href="javascript://" onclick="goMemJoin()" class="btn_type01">회원가입 바로가기</a>
