--- a/PC/html/new/menu0.html
+++ b/PC/html/new/menu0.html
@@ -817,7 +817,7 @@ jQuery(function($){
     <!-- search -->
 
     <!-- BEST FAQ -->
-    <h3 class="s_title"><span class="only_english">BEST FAQ</span><!-- <strong class="desc">고객님들께서 가장 많이 궁금해하시는 사항입니다.</strong> --></h3>
+    <h3 class="s_title mgt80"><span class="only_english">BEST FAQ</span><!-- <strong class="desc">고객님들께서 가장 많이 궁금해하시는 사항입니다.</strong> --></h3>
     <table class="bbs_list01">
         <caption></caption>
         <colgroup>
