--- a/PC/html/new/menu2_4.html
+++ b/PC/html/new/menu2_4.html
@@ -892,7 +892,7 @@ jQuery(function($){
                             <span class="input_wrap">
                                 <input type="text" placeholder="" class="width_point" id="prdtBrand">
                             </span>
-                            <a href="./popupBulkList.html" onclick="window.open(this.href, '_searchPrdt', 'width=715,height=600,scrollbars=yes');return false;" target="_blank" title="새창에서 열림" class="btn_type01 btn_space">검색</a>  
+                            <a href="./popupBulkList.html" onclick="window.open(this.href, '_searchPrdt', 'width=730,height=600,scrollbars=yes');return false;" target="_blank" title="새창에서 열림" class="btn_type01 btn_space">검색</a>  
                         </div>
                     </td>
                 </tr>
@@ -902,7 +902,7 @@ jQuery(function($){
                     <td> 
                         <div class="input_wrap">
                             <input type="text" placeholder="" class="" id="wishBuyCount">
-                            <span class="point02">(* 숫자만 입력가능합니다)</span>
+                            <span class="point02 mgt5">(* 숫자만 입력가능합니다)</span>
                         </div>
                     </td>
                 </tr>
