--- a/PC/html/new/popupBulkList.html
+++ b/PC/html/new/popupBulkList.html
@@ -67,7 +67,7 @@
                                 </ul>
                             </div>
                         </div>
-                        <div id="searchProduct" style="display: inline-block; margin-top: 85px;">
+                        <div id="searchProduct">
         
         
             <div class="prod_list_brd">
